Showing tab delete: CSS typo

--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -842,7 +842,7 @@ div#reportData {
 .form_tabber #tab_deleter img {
 	height: 1.3em;
 	vertical-align: top;
-	cursot: pointer;
+	cursor: pointer;
 }
 
 .form_tabber .tab_choice.active img {
