--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/tab_grandchild_blocks.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/tab_grandchild_blocks.vm
@@ -15,6 +15,7 @@
 ##  You should have received a copy of the GNU General Public License
 ##  along with agileBase.  If not, see <http://www.gnu.org/licenses/>.
 ##
+#set($grandchild = true)
 #set($parentRowId = $sessionData.getRowId($sessionTable))
 #set($filter = $viewTools.getNewFilterMap())
 #set($success = $filter.put($sessionTable.getPrimaryKey(), "$sessionRowId"))
