--- a/gtpb_clientside/styles/report.css
+++ b/gtpb_clientside/styles/report.css
@@ -136,14 +136,14 @@ table#reportData td:last-child {
 }
 
 table#reportData tr#currentRow td { 
-  background-color: #dde63f!important; /* #3875d7!important; /* #ffd588; */
+  background-color: #dde6ef!important; /* #3875d7!important; /* #ffd588; */
   color: white!important;
   border-right: none;
 }				
 
 table#reportData tr#currentRow td.leading,
 table#reportData tr#currentRow td.trailing {
-  background-color: #dde63f; /* #FFBA3B; */
+  background-color: #dde6ef; /* #FFBA3B; */
 }
 
 table#reportData tr td.deleter {
