--- a/gtpb_clientside/styles/report.css
+++ b/gtpb_clientside/styles/report.css
@@ -137,7 +137,7 @@ table#reportData td:last-child {
 
 table#reportData tr#currentRow td { 
   background-color: #dde6ef!important; /* #3875d7!important; /* #ffd588; */
-  color: white!important;
+  /* color: white!important; */
   border-right: none;
 }				
 
