--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/tab_selector_report.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/tab_selector_report.vm
@@ -27,7 +27,8 @@
     #end
   #end
 #end
-#if(!$sessionRowFound)
+
+#if((!$sessionRowFound) && (!$grandchild))
   ## Revert to the first item in the list
   #set($sessionRowId = $datarows.get(0).getRowId())
 #end
