--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/report_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/report_data.vm
@@ -107,9 +107,9 @@
 	  #if($mobile_device)
 		  #set($click="document.location='AppController.servlet?return=$return&set_row_id=$datarow.getRowId()';")
 	  #elseif($parentTable)
-      #set($click="loadIntoTabTable(this, '$sessionTable.getInternalTableName()', $datarow.getRowId())")##
+      #set($click="loadIntoTabTable(this, '$sessionTable.getInternalTableName()', $datarow.getRowId());")##
     #elseif($table_part_only)
-      #set($click="loadIntoPanel('$sessionReport.getInternalReportName()', $datarow.getRowId())")##
+      #set($click="loadIntoPanel('$sessionReport.getInternalReportName()', $datarow.getRowId());")##
     #else
       #set($click="loadIntoPane3('AppController.servlet?return=$return&set_row_id=$datarow.getRowId()&set_custom_string=1&key=report_tabindex&value=2', $datarow.getRowId(), $numberOfTabs);showPane3IfNecessary(event);")##
 	  #end##
