Try pane2/3 mutually exclusive

--- a/gtpb_clientside/WEB-INF/templates/gui/toolbar/buttons/pane3.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/toolbar/buttons/pane3.vm
@@ -93,12 +93,8 @@
 		  jqOtherButton = $(oPane2Butt);
 		}
 		if (jqThisButton.hasClass("REPORT")) {
-		  if(jqThisButton.hasClass("selected")) {
-			  jqOtherButton.removeClass("selected");
-				jqThisButton.addClass("selected");
-			} else {
-			  jqOtherButton.addClass("selected");
-			  jqThisButton.removeClass("selected");
+		  if(jqThisButton.hasClass("selected") && jqOtherButton.hasClass("selected") {
+			  jqOtherButton.click();
 			}
 		  // Full height: either pane 2 or 3, not both
 		  $(oPane2Butt).removeClass('selected');
