Try pane2/3 mutually exclusive

--- a/gtpb_clientside/WEB-INF/templates/gui/toolbar/buttons/pane3.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/toolbar/buttons/pane3.vm
@@ -112,7 +112,7 @@
 #set($caption='Record')
 #if($view.getLoggedInUser().getUserType() == "REPORT")
   #set($params='toggleButton=true')
-  #set($classes='toggleButton')
+  #set($classes='toggleButton REPORT')
 #else
   #set($params='selected=true toggleButton=true')
   #set($classes='selected toggleButton')
