--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2_body.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2_body.vm
@@ -138,6 +138,7 @@ $viewTools.startTimer("gui/pane2/pane2_body")
 		    #set($rightAlign = true)
       #end
       #set($image = false)
+			#set($textValue = false)
       #if($fieldCategory == "FILE")
         #set($fileValue = $viewTools.getFileValueTool($cell))
         #if($fileValue.isImage())
@@ -156,6 +157,7 @@ $viewTools.startTimer("gui/pane2/pane2_body")
           #set($cellContentLength=$cell.length() * 2)
   		  #else
           #set($cellContentLength=$cell.length() / 2)
+					#set($textValue = $viewTools.getTextValueTool($cell))
 		    #end
         #if($cellContentLength > 500)
           #set($cellContentLength = 500)
@@ -167,6 +169,7 @@ $viewTools.startTimer("gui/pane2/pane2_body")
 		  #if($rightAlign) #set($style = "$style text-align:right; ") #end
           <td #if($cellContentLength<=10)nowrap="true"#end #if($style != "")style="$style"#end #if($class != "")class="$class"#end>
             <div style="min-width:${cellContentLength}px" #if(($cellContentLength > $cellLengthThreshold) || $image) class="in_cell" #end>
+							#if($textValue.isUrl()) <img src="http://g.etfv.co/$textValue.getFormattedUrl($cell)" />#end ##
               #if(!(($thisUniqueId == $lastUniqueId) && ($cell == $lastValues.get($cellNumber))))$cell#else<span class="greytext">$cell</span>#end
             </div>
           </td>
