--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2_body.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2_body.vm
@@ -157,7 +157,7 @@ $viewTools.startTimer("gui/pane2/pane2_body")
           #set($cellContentLength=$cell.length() * 2)
   		  #else
           #set($cellContentLength=$cell.length() / 2)
-					#set($textValue = $viewTools.getTextValueTool($cell))
+					#set($textValue = $viewTools.getTextValueTool("$cell"))
 					$viewTools.log("$cell: $textValue.isUrl()")
 		    #end
         #if($cellContentLength > 500)
