--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2_body.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2_body.vm
@@ -169,7 +169,7 @@ $viewTools.startTimer("gui/pane2/pane2_body")
 		  #if($rightAlign) #set($style = "$style text-align:right; ") #end
           <td #if($cellContentLength<=10)nowrap="true"#end #if($style != "")style="$style"#end #if($class != "")class="$class"#end>
             <div style="min-width:${cellContentLength}px" #if(($cellContentLength > $cellLengthThreshold) || $image) class="in_cell" #end>
-							#if($textValue.isURL())<img class="favicon" src="http://g.etfv.co/$textValue.getFormattedURL()?defaulticon=1pxgif" />&nbsp;#end##
+							#if($textValue.isURL())<img class="favicon" src="https://getfavicon.appspot.com/$textValue.getFormattedURL()?defaulticon=1pxgif" />&nbsp;#end##
               #if(!(($thisUniqueId == $lastUniqueId) && ($cell == $lastValues.get($cellNumber))))$cell#else<span class="greytext">$cell</span>#end
             </div>
           </td>
