--- a/gtpb_clientside/styles/report.css
+++ b/gtpb_clientside/styles/report.css
@@ -450,4 +450,6 @@ table#reportData th div.mini_action {
 .favicon {
 	float:left;
 	height:16px;
+	filter: url(resources/filters.svg#grayscale);
+  -webkit-filter: grayscale(100%);
 }
