In grandchild selector, exclude immediate parent fields

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/report_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/report_data.vm
@@ -44,7 +44,8 @@
     #if(((!$field.isPrimaryKey()) && (!$field.getReportCalcField().isReportHidden())) || 
          ($sessionContext == "SYSADMIN") || $sectionedReport)##
       ## parentTable will only be defined if we're in a tab
-      #if(!$field.getTableContainingField().equals($parentTable))##
+			#set($tableContainingField = $field.getTableContainingField())
+      #if(!($tableContainingField.equals($parentTable) || ($grandchild && $tableContainingField.equals($sessionTable))))##
 	      #set($success=$fields.add($field))##
       #end
 	  #end ## added to show display field name for relation fields
