In grandchild selector, exclude immediate parent fields

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/report_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/report_data.vm
@@ -45,7 +45,7 @@
          ($sessionContext == "SYSADMIN") || $sectionedReport)##
       ## parentTable will only be defined if we're in a tab
 			#set($tableContainingField = $field.getTableContainingField())
-      #if(!($tableContainingField.equals($parentTable) || ($grandchild && $tableContainingField.equals($sessionTable))))##
+      #if(!($tableContainingField.equals($parentTable) || $tableContainingField.equals($gcParentTable)))##
 	      #set($success=$fields.add($field))##
       #end
 	  #end ## added to show display field name for relation fields
