--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/tab_grandchild_blocks.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/tab_grandchild_blocks.vm
@@ -19,7 +19,9 @@
 #set($parentRowId = $sessionData.getRowId($sessionTable))
 #set($filter = $viewTools.getNewFilterMap())
 #set($success = $filter.put($sessionTable.getPrimaryKey(), "$sessionRowId"))
-#foreach($gcFormTab in $sessionTable.getFormTabs())
+#set($gcFormTabs = $sessionTable.getFormTabs())
+#set($gcParentTable = $sessionTable)
+#foreach($gcFormTab in $gcFormTabs)
 	#set($selectorReport = $gcFormTab.getSelectorReport())
   #set($sessionRowId = -1) ## $sessionData.getRowId($gcFormTab.getTable()))
   #set($datarows = $view.getReportDataRows($selectorReport,50,$filter,true))
