--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/comment_feed.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/comment_feed.vm
@@ -16,6 +16,7 @@
 ##  along with agileBase.  If not, see <http://www.gnu.org/licenses/>.
 ##
 <div class="comment_feed"><input type="text" class="comment_input" placeholder="Add $field" rowid="$sessionRowId" internalfieldname="$field.getInternalFieldName()" internaltablename="$sessionTable.getInternalTableName()"/><input type="button" value="add" /></div>
-<div class="comments" id="comments_$field.getInternalFieldName()">
-  #parse("gui/resources/input/comments.vm")
-</div>
+## called by input.vm anyway
+##<div class="comments" id="comments_$field.getInternalFieldName()">
+##  #parse("gui/resources/input/comments.vm")
+##</div>
