Supply rowid when adding comment: use when reloading

--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/comments.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/comments.vm
@@ -18,6 +18,7 @@
 ## If field object not set
 #if(!$field.getFieldCategory())
   #set($field = $sessionData.getCustomField("comment"))
+  #set($sessionRowId = $sessionData.getCustomInteger("comment_rowid"))
 #end
 #if(!$comments)
   #if(!$sessionRowId)
