--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_detail_row.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_detail_row.vm
@@ -25,6 +25,16 @@
   onclick="$row.get(1)" 
   forcehighlight="true">
   <td class="leading">&nbsp;</td>
+  #set($useDeleteCheckboxes = false)
+  #if(!$headingRow)
+    #foreach($field in $fields)
+      #set($isCalc = $field.getClass().getSimpleName() == "CalculationFieldDefn")
+      #if($detailTables.contains($field.getTableContainingField()) && !$isCalc)
+        #set($useDeleteCheckboxes = true)
+      #end
+    #end
+  #end
+  #set($numCells = $thisValues.size())
   #foreach($cell in $thisValues)
     #set($cellNumber = $foreach.count - 1)
     #set($field = $fields.get($cellNumber))
@@ -35,7 +45,9 @@
         #set($detailCalc = true)
       #end
     #end
-    #if( ( (($detailTables.contains($field.getTableContainingField()) && !$isCalc) || $detailCalc) ) && (!$field.isPrimaryKey()) )
+    ## If a non-primary key detail field
+    #set($nonPkeyDetailField =  ( (($detailTables.contains($field.getTableContainingField()) && !$isCalc) || $detailCalc) ) && (!$field.isPrimaryKey())) 
+    #if((($cellNumber+1) == $numCells) || $nonPkeyDetailField)
       #set($rightAlign = false)
       #set($fieldCategory = $field.getFieldCategory().toString())
       #if(($fieldCategory == "NUMBER") || ($fieldCategory == "SEQUENCE"))
