Include delete checkboxes for Gareth: don't include when not appropriate

--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_detail_row.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_detail_row.vm
@@ -60,5 +60,7 @@
       <td #if($style != "")style="$style"#end>#if($headingRow) $field #else $cell #end</td>
     #end
   #end
-  <td class="trailing">&nbsp;</td>
+  #if(!$useDeleteCheckboxes)
+    <td class="trailing">&nbsp;</td>
+  #end
 </tr>
